(core) Fix scrollbar in code view
Summary:
The scrollbar wasn't properly positioned inside the
bounds of the main panel.

Test Plan: Manual.

Reviewers: jarek

Reviewed By: jarek

Subscribers: paulfitz, jarek

Differential Revision: https://phab.getgrist.com/D4357

--- a/app/client/components/CodeEditorPanel.css
+++ b/app/client/components/CodeEditorPanel.css
@@ -1,8 +1,5 @@
 .g-code-panel {
-  position:absolute;
-  width: 100%;
-  height: 100%;
-  margin: 10px;
+  padding: 10px;
   overflow: auto;
 }
 
